--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tw.API"/>
+	<classpathentry kind="lib" path="C:/Users/User/eclipse-workspace/JavaLesson/dir1/json-20240303.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
